--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@lottiefiles/react-lottie-player": "^3.4.7",
     "@mui/core": "^5.0.0-alpha.49",
     "@mui/icons-material": "^5.8.0",
     "@mui/lab": "^5.0.0-alpha.49",
     "@mui/material": "^5.0.0",
     "@mui/styled-engine-sc": "^5.0.0",
     "@mui/styles": "^5.0.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
@@ -60,7 +60,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -79,5 +80,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
+    "cypress": "^10.3.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
