--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.1",
-    "recharts": "^2.1.4",
+    "recharts": "^2.1.13",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.3",
+    "waait": "^1.0.5",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
@@ -83,7 +84,9 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "cypress": "^10.3.1",
+    "enzyme": "^3.11.0",
     "react-test-renderer": "^17.0.2"
   }
 }
