--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^2.16.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/core": "^5.0.0-alpha.49",
@@ -20,6 +21,7 @@
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
     "chartjs-plugin-style": "^0.5.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.0",
     "formik": "^2.2.9",
     "graphql": "^16.3.0",
@@ -30,12 +32,14 @@
     "react-chartjs-2": "^3.2.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^14.2.2",
     "react-error-boundary": "^3.1.4",
     "react-icons": "^4.2.0",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.14.0",
     "recharts": "^2.1.13",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
